Add 12x12 maze and fix player and goal icon

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <!-- Instructions -->
         <p id="text-1" class="text">
-           Hybrid game description
+            Hybrid game description
         </p>
     </div>
 
@@ -38,7 +38,7 @@
             <div id="right"></div>
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/script.js" type="module"></script>
 
 </body>
 
