add fix for quiz

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div id="tiles" class="layer"></div>
                 <div id="sprites" class="layer"></div>
 
-                <div id="success-msg">Umesto ovoga ide pop-up sa kviz pitanjima?</div>
+                <!-- <div id="success-msg">Umesto ovoga ide pop-up sa kviz pitanjima?</div> -->
             </div>
         </div>
 
@@ -42,18 +42,16 @@
     </div>
 
     <!-- Quiz -->
-    <div class="container">
+    <div class="container" id="quiz-container">
         <div id="question-container" class="hide">
             <div id="question">Question</div>
             <div id="answer-buttons" class="btn-grid">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
-                <button class="btn">Answer 3</button>
-                <button class="btn">Answer 4</button>
             </div>
         </div>
         <div class="controls">
-            <button id="start-btn" class="start-btn btn">Start</button>
+            <!-- <button id="start-btn" class="start-btn btn">Start</button> -->
             <button id="next-btn" class="next-btn btn hide">Next</button>
         </div>
     </div>
