--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 </head>
 
 <body>
+    <header>
+        <div class="logo">
+            <img src="assets/images/logo.svg" alt="">
+        </div>
+    </header>
     <!-- Maze Container -->
     <div id="game-container-1" class="game-container">
         <div id="map-and-controls">
