add fix for quiz and style for text

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
         </div>
 
         <!-- Instructions -->
-        <p id="text-1" class="text">
-            Hybrid game description
-        </p>
+        <div class="instructions">
+            <p id="text-1" class="text">
+                Hybrid Maze Game
+            </p>
+        </div>
+
     </div>
 
     <!-- Controls -->
@@ -62,7 +65,7 @@
     </div>
 
 
- 
+
 </body>
 
 </html>
