--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="./assets/images/icon.png" sizes="192x192" />
-    <title>Hybrid Maze Game</title>
+    <link rel="icon" href="./assets/images/valcon-favicon.ico" sizes="192x192" />
+    <title>Valcon Maze Game</title>
 
     <script src="js/script.js" type="module"></script>
     <script defer src="js/quiz.js" type="module"></script>
@@ -16,7 +19,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="assets/images/logo.svg" alt="">
+            <img src="assets/images/Valcon-DarkGrey-RGB-300DPI.png" alt="">
         </div>
     </header>
     <!-- Maze Container -->
@@ -34,7 +37,7 @@
         <!-- Instructions -->
         <div class="instructions">
             <p id="text-1" class="text">
-                Hybrid Maze Game
+                Valcon Maze Game
             </p>
         </div>
 
@@ -50,8 +53,9 @@
     </div>
 
     <!-- Quiz -->
-    <div class="container" id="quiz-container">
-        <div id="question-container" class="hide">
+    <div id="overlay">
+         <div class="container" id="quiz-container">
+        <div id="question-container">
             <div id="question">Question</div>
             <div id="answer-buttons" class="btn-grid">
                 <button class="btn">Answer 1</button>
@@ -63,6 +67,8 @@
             <button id="next-btn" class="next-btn btn hide">Next</button>
         </div>
     </div>
+    </div>
+   
 
 
 
