add animation for quiz and add multiple goals for maze

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!-- Quiz -->
     <div id="overlay">
-         <div class="container" id="quiz-container">
+         <div class="container slide-in-blurred-top" id="quiz-container">
         <div id="question-container">
             <div id="question">Question</div>
             <div id="answer-buttons" class="btn-grid">
